<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="419dp"
        android:layout_height="240dp"
        android:background="#FFFf88"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" >

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="60dp"
            android:layout_height="64dp"
            app:srcCompat="@drawable/f1"
            tools:layout_editor_absoluteX="309dp"
            tools:layout_editor_absoluteY="174dp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/pizza"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="177dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/Rice"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="178dp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="278dp"
            android:layout_height="44dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/searchfood"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="99dp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size"
            tools:layout_editor_absoluteX="19dp"
            tools:layout_editor_absoluteY="14dp" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_search"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="94dp" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/btn_star_big_on"
            tools:layout_editor_absoluteX="338dp"
            tools:layout_editor_absoluteY="16dp" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_popup_reminder"
            tools:layout_editor_absoluteX="277dp"
            tools:layout_editor_absoluteY="16dp" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="85dp"
            android:layout_height="66dp"
            app:srcCompat="@drawable/c1"
            tools:layout_editor_absoluteX="204dp"
            tools:layout_editor_absoluteY="177dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="421dp"
        android:layout_height="494dp"
        android:background="#D3D3D3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-8dp"
        tools:layout_editor_absoluteY="241dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="102dp"
            android:layout_height="30dp"
            android:text="@string/discount"
            tools:layout_editor_absoluteX="201dp"
            tools:layout_editor_absoluteY="55dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popularfoods"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="226dp" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seeall"
            tools:layout_editor_absoluteX="333dp"
            tools:layout_editor_absoluteY="226dp" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="136dp"
            android:layout_height="155dp"
            app:srcCompat="@drawable/pizza"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="39dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Order Here"
            tools:layout_editor_absoluteX="200dp"
            tools:layout_editor_absoluteY="125dp" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="162dp"
            android:layout_height="202dp"
            app:srcCompat="@drawable/rac1"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="246dp" />

        <EditText
            android:id="@+id/editTextTextPersonName12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/riceandcurry_chicken"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="415dp" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="168dp"
            android:layout_height="119dp"
            app:srcCompat="@drawable/c1"
            tools:layout_editor_absoluteX="225dp"
            tools:layout_editor_absoluteY="285dp" />

        <EditText
            android:id="@+id/editTextTextPersonName13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/hotdrumlet"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="257dp"
            tools:layout_editor_absoluteY="415dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="161dp"
            android:layout_height="41dp"
            android:text="@string/description"
            tools:layout_editor_absoluteX="199dp"
            tools:layout_editor_absoluteY="75dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

